update: 랭킹 표출 방식 변경(TMDB -> JSON)